tests/mir-test/test_out/loop-drops.txt
error: value is possibly moved more then once
  --> loop-drops/root.ctl:8:5
   |
 8 |       loop {
   |  _____-
 9 | |         drop(a)
   |                ^ here
10 | |     }
   | |_____- info: the loop
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute
   = note: nonlocal value remains moved even after loop jumps back
   = help: 'break' after the move or move the value beck before next iteration

error: move out of already moved value
  --> loop-drops/root.ctl:24:25
   |
24 |         if true => drop(a)
   |                         - info: previous move of value
25 |         else => continue
26 |         break
27 |     }
28 |     drop(a)
   |          ^ here
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute

error: value is possibly moved more then once
  --> loop-drops/root.ctl:33:5
   |
33 |       loop {
   |  _____-
34 | |         if true => drop(a)
   |                           ^ here
35 | |         else => break
36 | |     }
   | |_____- info: the loop
   |
   = note: you can disable move semantics with '#[no_moves]' function attribute
   = note: nonlocal value remains moved even after loop jumps back
   = help: 'break' after the move or move the value beck before next iteration

info: mir repr of functions:
fn [] drop(var0: param0) -> ()  { (var2: param0) ret var3
    block0 {
        drop var2
        return var0
    }

}

fn [] loop_drop() -> ()  { () ret var4
    block1 {
        var5 ={}
        var6 = var5
        goto block2
    }

    block2 {
        access var6
        var8 = drop[0\A](val6)
        goto block2
    }

}

fn [] loop_break_drop() -> ()  { () ret var9
    block3 {
        var10 ={}
        var11 = var10
        goto block4
    }

    block4 {
        access var11
        var13 = drop[0\A](val11)
        goto block5
    }

    block5 {
        return var0
    }

}

fn [] linear_loop_branch_drop() -> ()  { () ret var14
    block6 {
        var15 ={}
        var16 = var15
        goto block7
    }

    block7 {
        var19 = true
        split var19 block8 block9
    }

    block8 {
        access var16
        var18 = drop[0\A](val16)
        goto block10 with var18
    }

    block9 {
        goto block7
    }

    block10 {
        goto block11
    }

    block11 {
        access var16
        var14 = drop[0\A](val16)
        return var14
    }

}

fn [] loop_branch_drop() -> ()  { () ret var20
    block12 {
        var21 ={}
        var22 = var21
        goto block13
    }

    block13 {
        var25 = true
        split var25 block14 block15
    }

    block14 {
        access var22
        var24 = drop[0\A](val22)
        goto block16 with var24
    }

    block15 {
        goto block17
    }

    block16 {
        goto block13
    }

    block17 {
        return var0
    }

}

fn [] loop_drop_and_move_in() -> ()  { () ret var26
    block18 {
        var27 ={}
        var28 = var27
        goto block19
    }

    block19 {
        var31 = true
        split var31 block20 block21
    }

    block20 {
        access var28
        var30 = drop[0\A](val28)
        goto block22 with var30
    }

    block21 {
        goto block22
    }

    block22 {
        access var28
        var28 ={}
        goto block19
    }

}



